# borehole-velta

./: README.md  diagnose_all_skvazhina.py  diagnose_blocks.py  diagnose_deep.py  diagnose_system.py  diagnose_text_layers.py  docker-compose.yaml  example_usage.py  pyproject.toml  test_existing_document.py  test_improved_connection.py  test_layers.py  test_modelspace.py  test_working_code.py
src/: __init__.py  autocad_connector.py  autocad_handler.py  borehole_processor.py  config.py  console_output.py  main.py
