[project]
name = "borehole-velta"
version = "0.1.0"
description = ""
authors = [
    {name = "homostultus39",email = "homostultus39@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyautocad>=0.2.0,<0.3.0",
    "pywin32>=306",
    "comtypes>=1.1.14"
]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.scripts]
borehole-velta = "src.main:main"
test-modules = "test_modules:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
